--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "gulp",
-	  "postinstall": "npm run typings install",
+    "postinstall": "npm run typings install",
     "typings": "typings"
   },
   "license": "MIT",
@@ -19,7 +19,6 @@
     "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
-    "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
@@ -29,7 +28,9 @@
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.4",
     "gulp-stylus": "^2.5.0",
     "gulp-tsc": "^1.2.0",
