--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-stylus": "^2.5.0",
     "gulp-tsc": "^1.2.0",
+    "gulp-tslint": "^6.1.2",
     "gulp-uglify": "^2.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
     "stream-series": "^0.1.1",
     "stylus": "^0.54.5",
     "systemjs-builder": "^0.15.26",
+    "tslint": "^3.15.1",
     "typescript": "^1.8.10",
     "typings": "^1.0.4"
   }
