--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.1",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -35,6 +36,7 @@
     "gulp-inject": "^4.1.0",
     "gulp-inline-source": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-spawn-mocha": "^3.1.0",
