--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
+    "@angular/common": "^2.2.1",
+    "@angular/compiler": "^2.2.1",
+    "@angular/core": "^2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "^2.2.1",
+    "@angular/platform-browser": "^2.2.1",
+    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/router": "^3.2.1",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
+    "rxjs": "^5.0.0-beta.12",
+    "systemjs": "^0.19.41",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -30,15 +28,14 @@
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-angular2-embed-templates": "^2.2.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-inject": "^4.1.0",
+    "gulp-inline-ng2-template": "^4.0.0",
     "gulp-inline-source": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-pug": "^3.0.4",
-    "gulp-rename": "^1.2.2",
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-stylus": "^2.5.0",
     "gulp-tsc": "^1.2.0",
@@ -49,8 +46,8 @@
     "stream-series": "^0.1.1",
     "stylus": "^0.54.5",
     "systemjs-builder": "^0.15.26",
-    "tslint": "^3.15.1",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "tslint": "^4.0.0",
+    "typescript": "^2.0.10",
+    "typings": "^2.0.0"
   }
 }
