--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/router": "^3.2.1",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.41",
     "zone.js": "^0.6.12"
   },
@@ -39,14 +39,13 @@
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-stylus": "^2.5.0",
     "gulp-tsc": "^1.2.0",
-    "gulp-tslint": "^6.1.2",
+    "gulp-tslint": "^6.1.3",
     "gulp-uglify": "^2.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
     "stream-series": "^0.1.1",
     "stylus": "^0.54.5",
     "systemjs-builder": "^0.15.26",
-    "tslint": "^4.0.0",
     "typescript": "^2.0.10",
     "typings": "^2.0.0"
   }
