--- a/package.json
+++ b/package.json
@@ -9,44 +9,45 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/forms": "^2.2.1",
-    "@angular/http": "^2.2.1",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
-    "@angular/router": "^3.2.1",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/http": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@angular/router": "^3.4.2",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.0.3",
     "systemjs": "^0.19.41",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.1",
+    "autoprefixer": "^6.6.1",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
-    "gulp-inject": "^4.1.0",
+    "gulp-inject": "^4.2.0",
     "gulp-inline-ng2-template": "^4.0.0",
     "gulp-inline-source": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
-    "gulp-pug": "^3.0.4",
+    "gulp-pug": "^3.2.0",
     "gulp-spawn-mocha": "^3.1.0",
-    "gulp-stylus": "^2.5.0",
-    "gulp-tsc": "^1.2.0",
-    "gulp-tslint": "^6.1.3",
+    "gulp-stylus": "^2.6.0",
+    "gulp-tsc": "^1.2.6",
+    "gulp-tslint": "^7.0.1",
     "gulp-uglify": "^2.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.1.0",
+    "mocha": "^3.2.0",
     "stream-series": "^0.1.1",
     "stylus": "^0.54.5",
-    "systemjs-builder": "^0.15.26",
-    "typescript": "^2.0.10",
-    "typings": "^2.0.0"
+    "systemjs-builder": "^0.15.34",
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0"
   }
 }
