--- a/package.json
+++ b/package.json
@@ -4,50 +4,50 @@
   "version": "0.1.0",
   "scripts": {
     "start": "gulp",
-    "postinstall": "npm run typings install",
     "typings": "typings"
   },
   "license": "MIT",
-  "dependencies": {
-    "@angular/common": "^2.4.2",
-    "@angular/compiler": "^2.4.2",
-    "@angular/core": "^2.4.2",
-    "@angular/forms": "^2.4.2",
-    "@angular/http": "^2.4.2",
-    "@angular/platform-browser": "^2.4.2",
-    "@angular/platform-browser-dynamic": "^2.4.2",
-    "@angular/router": "^3.4.2",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.3",
-    "systemjs": "^0.19.41",
-    "zone.js": "^0.7.4"
-  },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
-    "chai": "^3.5.0",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/router": "^4.1.0",
+    "@types/chai": "^4.0.2",
+    "@types/core-js": "^0.9.42",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^8.0.19",
+    "autoprefixer": "^7.1.2",
+    "chai": "^4.1.0",
+    "core-js": "^2.4.1",
+    "del": "^3.0.0",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-inject": "^4.2.0",
     "gulp-inline-ng2-template": "^4.0.0",
-    "gulp-inline-source": "^3.0.0",
+    "gulp-inline-source": "^3.1.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-pug": "^3.2.0",
-    "gulp-spawn-mocha": "^3.1.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-spawn-mocha": "^3.3.0",
     "gulp-stylus": "^2.6.0",
-    "gulp-tsc": "^1.2.6",
-    "gulp-tslint": "^7.0.1",
-    "gulp-uglify": "^2.0.0",
+    "gulp-tsc": "^1.3.2",
+    "gulp-tslint": "^8.0.0",
+    "gulp-uglify": "^3.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "mocha": "^3.3.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.3.0",
     "stream-series": "^0.1.1",
     "stylus": "^0.54.5",
-    "systemjs-builder": "^0.15.34",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.4",
-    "typings": "^2.1.0"
+    "systemjs": "^0.20.12",
+    "systemjs-builder": "^0.16.4",
+    "tslint": "^5.1.0",
+    "typescript": "^2.3.2",
+    "zone.js": "^0.8.9"
   }
 }
