--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
 		"experimentalDecorators": true,
 		"removeComments": false,
 		"noImplicitAny": false,
-		"lib": ["es6", "dom"]
+		"lib": ["es6", "dom", "es2016.array.include"]
 	}
 }
