--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
 	"license": "MIT",
 	"dependencies": {},
 	"devDependencies": {
-		"@angular/common": "^4.1.0",
-		"@angular/compiler": "^4.1.0",
-		"@angular/core": "^4.1.0",
-		"@angular/forms": "^4.1.0",
-		"@angular/http": "^4.1.0",
-		"@angular/platform-browser": "^4.1.0",
-		"@angular/platform-browser-dynamic": "^4.1.0",
-		"@angular/router": "^4.1.0",
-		"@types/chai": "^4.0.2",
-		"@types/core-js": "^0.9.42",
-		"@types/mocha": "^2.2.41",
-		"@types/node": "^8.0.19",
-		"autoprefixer": "^7.1.2",
-		"chai": "^4.1.0",
-		"core-js": "^2.4.1",
+		"@angular/common": "6.0.0",
+		"@angular/compiler": "6.0.0",
+		"@angular/core": "6.0.0",
+		"@angular/forms": "6.0.0",
+		"@angular/http": "6.0.0",
+		"@angular/platform-browser": "6.0.0",
+		"@angular/platform-browser-dynamic": "6.0.0",
+		"@angular/router": "6.0.0",
+		"@types/chai": "^4.1.4",
+		"@types/core-js": "^2.5.0",
+		"@types/mocha": "^5.2.5",
+		"@types/node": "^10.7.1",
+		"autoprefixer": "^8.4.1",
+		"chai": "^4.1.2",
+		"core-js": "^2.5.7",
 		"del": "^3.0.0",
-		"gulp": "github:gulpjs/gulp#4.0",
-		"gulp-angular2-project-registry": "0.0.5",
+		"gulp": "^4.0.0",
+		"gulp-angular2-project-registry": "^2.0.6",
 		"istanbul": "^0.4.5",
-		"mocha": "^3.3.0",
-		"reflect-metadata": "^0.1.10",
-		"rxjs": "^5.3.0",
+		"mocha": "^5.2.0",
+		"reflect-metadata": "^0.1.12",
+		"rxjs": "^6.2.2",
 		"stream-series": "^0.1.1",
 		"stylus": "^0.54.5",
-		"systemjs": "^0.20.12",
-		"systemjs-builder": "^0.16.4",
-		"tslint": "^5.1.0",
-		"typescript": "^2.3.2",
-		"zone.js": "^0.8.9"
+		"systemjs": "^0.21.4",
+		"systemjs-builder": "^0.16.13",
+		"tslint": "^5.11.0",
+		"typescript": "~2.7.2",
+		"zone.js": "^0.8.26"
 	}
 }
